--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ body {
 body * {
     font-family: 'Inter', sans-serif;
     color: var(--text-color);
+    height: 100vh;
 }
 
 #container {
@@ -81,6 +82,7 @@ body * {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+    animation: slide-back 0.2s;
 }
 
 #switch span {
@@ -95,8 +97,11 @@ body * {
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
 }
 
 /* links */
@@ -156,3 +161,33 @@ footer {
     text-align: center;
     font-size: 14px;
 }
+
+/* media querys */
+
+@media (min-width: 700px){
+    :root {
+        --bg-url:  url(./assets/bg-desktop.jpg);
+    }
+        .light {
+            --bg-url: url(./assets/bg.desktop.light.jpg);
+        }
+    
+}
+
+@keyframes slide-in {
+    from {
+        left:0;
+    }
+        to {
+            left: 50%;
+        }
+} 
+
+@keyframes slide-back {
+    from {
+        left:50%;
+    }
+        to {
+            left: 0;
+        }
+} 
